--- a/tgMiniApps.html
+++ b/tgMiniApps.html
@@ -13,6 +13,10 @@
   </style>
 </head>
 <body>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script>
+        window.Telegram.WebApp.showAlert('Hey there!');
+    </script>
   <div id="test"></div>
 </body>
 </html>
