--- a/tgMiniApps.html
+++ b/tgMiniApps.html
@@ -16,7 +16,9 @@
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script>
         // 等待 Telegram Web App 完成初始化
+      console.log('start-00000')
         window.Telegram.WebApp.onReady(() => {
+          console.log('ready-111')
           // 获取用户信息
           const user = window.Telegram.WebApp.initDataUnsafe.user;
 
