--- a/tgMiniApps.html
+++ b/tgMiniApps.html
@@ -15,6 +15,7 @@
 <body>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script>
+    console.log('777', window.Telegram.WebApp.initDataUnsafe.user);
       // 等待 Telegram Web App 完成初始化
     window.Telegram.WebApp.ready(() => {
       // 获取用户信息
